fixed spacing on image caption

--- a/style.css
+++ b/style.css
@@ -56,7 +56,7 @@ main {
 }
 #img-caption {
     color:#E75A7C;
-    padding: 0em 0 2em 0;
+    padding: 1em 0 2em 0;
 }
 section {
     background-color: #E75A7C;
